# mapping_mCPP_navigation

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py
devel/lib/pkgconfig/: 2d_mapping.pc  mapping_2d.pc  multi_points_navigation.pc  robot_pose_ekf.pc  sensor_data_processing.pc  sensors_ekf.pc
devel/lib/robot_pose_ekf/: robot_pose_ekf  test_robot_pose_ekf  test_robot_pose_ekf_zero_covariance
devel/lib/sensor_data_processing/: add_noise  get_real_pose  publish_path
devel/share/2d_mapping/cmake/: 2d_mappingConfig.cmake
devel/share/mapping_2d/cmake/: mapping_2dConfig.cmake
src/mapping_2d/: CMakeLists.txt
src/mapping_2d/config/: revo_lds_melodic.lua
src/mapping_2d/launch/: autonomous_mapping.launch  mapping.launch
src/mapping_2d/map/: map.pgm
src/mapping_2d/slam_method/: cartographer.launch  karto.launch
src/mapping_2d/world/: bridge_8x40.world  fake_bridge.world
src/multi_points_navigation/: CMakeLists.txt
src/multi_points_navigation/launch/: multi_point_navigation.launch
src/multi_points_navigation/map/: map.yaml
src/multi_points_navigation/paths/: jibot1.txt  jibot2.txt  path_0.txt  path_1.txt
src/multi_points_navigation/rviz/: show.rviz
src/multi_points_navigation/scripts/: publish_path.py  send_mark.py  show_paths.py
src/robot_pose_ekf/: robot_pose_ekf.launch
src/robot_pose_ekf/src/: odom_estimation_node.cpp
src/sensor_data_processing/: CMakeLists.txt
src/sensor_data_processing/launch/: create_environment.launch  sensors_ekf.launch
src/sensor_data_processing/src/: add_noise.cpp  publish_path.cpp
(+16 files in other folders)
